convertedToMDAPI/objects/NotificationSetting__mdt.object
<CustomObject>
    <label>Message Setting</label>
    <pluralLabel>Message Settings</pluralLabel>
    <fields>
        <fullName>EventKey__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Event Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notifications__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Notifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ObjectType__c</fullName>
        <inlineHelpText>sObject Type the notification should be send for</inlineHelpText>
        <label>Object Type</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>DEMO_Alert_Settings</relationshipLabel>
        <relationshipName>DEMO_Alert_Settings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>RecipientExceptions__c</fullName>
        <inlineHelpText>Particular recipients that should be excluded such as the Submitter in an APH Approval Request</inlineHelpText>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Recipient Exceptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recipients__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Recipients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>